# KernovaOS

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml  x86_64-kernova.json
.cargo/: config.toml
.claude/commands/: check.md  milestone.md
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT.md  MILESTONES.md  PRD.md  REFERENCES.md  TESTING.md  TOOLING.md  TRD.md  VERIFICATION.md
initrd/: big.txt  hello.txt  motd.txt
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  shell.rs  vga_buffer.rs
src/fs/: mod.rs  ustar.rs
src/sched/: mod.rs  switch.rs  thread.rs
src/task/: executor.rs  keyboard.rs  mod.rs
src/usermode/: mod.rs  programs.rs  syscall.rs
tests/: basic_boot.rs  heap_allocation.rs  initrd.rs  oom.rs  should_panic.rs  stack_overflow.rs
