[package]
name = "kernova"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.6.0"
x86_64 = "0.15.5"
pic8259 = "0.11.0"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2.0", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33          # (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "oom"
harness = false
